<resources>
    <!-- MAIN ACTIVITY -->
    <string name="app_name">EasyOrg</string>
    <string name="new_task">Новая задача</string>
    <string name="task_list">Текущий список дел</string>
    <string name="calendar">Календарь</string>
    <string name="shopping_lists">Списки покупок</string>
    <string name="notes">Заметки</string>
    <string name="settings">Настройки</string>

    <!-- ADD TASK SECTION -->
    <string name="add_task">Добавление новой задачи</string>
    <string name="simple_task">Обычная</string>
    <string name="shopping_list">Список покупок</string>
    <string name="countable_task">Количественная</string>
    <string name="task_type">Тип задачи:</string>
    <string name="task_name">Название задачи:</string>
    <string name="count_goal">Количественная цель:</string>
    <string name="start_date">Дата начала:</string>
    <string name="date_today">Сегодня</string>
    <string name="date_tomorrow">Завтра</string>
    <string name="date_custom">Другая дата:</string>
    <string name="start_time">Время выполнения задачи:</string>
    <string name="start_time_today">Сегодня в течение дня</string>
    <string name="start_time_custom">Настраиваемый интервал</string>
    <string name="start_time_none">Бессрочная</string>
    <string name="time_during_day">В течение дня</string>
    <string name="time_custom">Конкретное:</string>
    <string name="reminder">Напоминание</string>
    <string name="not_set_f">Не выбрана</string>
    <string name="not_set_n">Не выбрано</string>
    <string name="deadline">Срок выполнения:</string>
    <string name="deadline_day">До конца дня</string>
    <string name="deadline_week">До конца недели</string>
    <string name="deadline_month">До конца месяца</string>
    <string name="deadline_year">До конца года</string>
    <string name="deadline_none">Бессрочно</string>
    <string name="deadline_custom">Другая дата:</string>
    <string name="setting_task_time">Установка времени задачи</string>
    <string name="input_shopping_list">Ввод списка покупок</string>

    <!-- CURRENT TASKS SECTION -->
    <string name="today_tasks">Задачи на сегодня</string>
    <string name="week_tasks">Задачи на неделю</string>
    <string name="month_tasks">Задачи на месяц</string>
    <string name="year_tasks">Задачи на год</string>
    <string name="perpetual_tasks">Бессрочные задачи</string>

    <!-- TASKVIEW DIALOGS -->
    <string name="task_status_title">Отметить статус задачи</string>
    <string name="task_status_actual">Актуальна</string>
    <string name="task_status_done">Выполнена</string>
    <string name="task_status_failed">Не будет выполнена</string>
    <string name="task_status_partly_done">Частично выполнена</string>
    <string name="task_status_postponed">Отложена</string>
    <string name="confirm_delete">Подтвердите удаление</string>
    <string name="confirm_delete_template">Вы действительно хотите удалить шаблон</string>
    <string name="confirm_delete_note">Вы действительно хотите удалить заметку</string>
    <string name="confirm_delete_task">Вы действительно хотите удалить задачу</string>
    <string name="edit_name">Название</string>
    <string name="edit_countable_goal">Количественную цель</string>
    <string name="edit_time_interval">Дату начала и окончания</string>
    <string name="edit_start_time">Время начала</string>
    <string name="edit_reminder">Напоминание</string>
    <string name="edit_note">Иконку</string>
    <string name="change_end_date">Изменить дату окончания</string>
    <string name="change_end_date_perpetual">Бессрочно</string>
    <string name="change_end_date_concrete">Конкретная дата</string>
    <string name="change_start_date">Изменить дату начала</string>
    <string name="change_task_name">Изменить название задачи</string>
    <string name="change_start_time">Изменить время начала</string>
    <string name="change_start_time_none">Без времени начала</string>
    <string name="change_start_time_concrete">Конкретное время</string>
    <string name="choose_note_icon">Выберите иконку заметки:</string>
    <string name="note_icon_video">Видео</string>
    <string name="note_icon_audio">Аудио</string>
    <string name="note_icon_money">Деньги</string>
    <string name="note_icon_car">Машина</string>
    <string name="note_icon_games">Игры</string>
    <string name="note_icon_books">Книги</string>

    <!-- REMINDER OPTIONS -->
    <string name="reminder_header">Напоминание:</string>
    <string name="reminder_none">Нет напоминания</string>
    <string name="reminder_exact">Ровно по времени</string>
    <string name="reminder_5min">За 5 минут</string>
    <string name="reminder_10min">За 10 минут</string>
    <string name="reminder_30min">За 30 минут</string>
    <string name="reminder_1hour">За 1 час</string>

    <!-- NAVIGATION -->
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="done">Готово</string>
    <string name="ok">OK</string>
    <string name="add">Добавить</string>
    <string name="back">Назад</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="save">Сохранить</string>

    <!-- TASK TYPES -->
    <string name="today">Сегодня</string>
    <string name="till_the_end_of_week">До конца недели</string>
    <string name="till_the_end_of_month">До конца месяца</string>
    <string name="till_the_end_of_year">До конца года</string>
    <string name="perpetual">Бессрочная</string>

    <!-- MONTHS -->
    <string name="january">Январь</string>
    <string name="february">Февраль</string>
    <string name="march">Март</string>
    <string name="april">Апрель</string>
    <string name="may">Май</string>
    <string name="june">Июнь</string>
    <string name="july">Июль</string>
    <string name="august">Август</string>
    <string name="september">Сентябрь</string>
    <string name="october">Октябрь</string>
    <string name="november">Ноябрь</string>
    <string name="december">Декабрь</string>

    <!-- MONTHS (SHORT) -->
    <string name="january_short">Янв</string>
    <string name="february_short">Фев</string>
    <string name="march_short">Мар</string>
    <string name="april_short">Апр</string>
    <string name="may_short">Мая</string>
    <string name="june_short">Июн</string>
    <string name="july_short">Июл</string>
    <string name="august_short">Авг</string>
    <string name="september_short">Сен</string>
    <string name="october_short">Окт</string>
    <string name="november_short">Ноя</string>
    <string name="december_short">Дек</string>

    <!-- MONTHS GENITIVES -->
    <string name="january_gen">Января</string>
    <string name="february_gen">Февраля</string>
    <string name="march_gen">Марта</string>
    <string name="april_gen">Апреля</string>
    <string name="may_gen">Мая</string>
    <string name="june_gen">Июня</string>
    <string name="july_gen">Июля</string>
    <string name="august_gen">Августа</string>
    <string name="september_gen">Сентября</string>
    <string name="october_gen">Октября</string>
    <string name="november_gen">Ноября</string>
    <string name="december_gen">Декабря</string>

    <!-- DAY OF WEEK (SHORT) -->
    <string name="monday_short">пн</string>
    <string name="tuesday_short">вт</string>
    <string name="wednesday_short">ср</string>
    <string name="thursday_short">чт</string>
    <string name="friday_short">пт</string>
    <string name="saturday_short">сб</string>
    <string name="sunday_short">вс</string>

    <!-- TOASTS -->
    <string name="error_input_task_name">Введите название задачи</string>
    <string name="error_input_countable_goal">Введите количественную цель</string>
    <string name="error_input_shopping_list">Введите список покупок</string>
    <string name="error_need_shopping_element">В списке покупок должен быть хотя бы один элемент</string>
    <string name="error_no_templates">Нет ни одного шаблона списка покупок</string>
    <string name="error_no_note_text">Введите текст заметки</string>
    <string name="error_no_template_name">Введите название шаблона</string>
    <string name="error_set_task_time_first">Установите сначала время начала задачи</string>
    <string name="success_added_task">Задача успешно добавлена</string>
    <string name="success_added_note">Заметка добавлена</string>
    <string name="success_saved_note">Заметка сохранена</string>
    <string name="success_added_template">Шаблон успешно добавлен</string>
    <string name="success_saved_template">Шаблон успешно добавлен</string>
    <string name="success_default_colors_set">Цвета по умолчанию установлены</string>
    <string name="note_deleted">Заметка удалена</string>
    <string name="note_updated">Заметка обновлена</string>
    <string name="template_deleted">Шаблон удален</string>
    <string name="task_deleted">Задача удалена</string>
    <string name="task_updated">Задача удалена</string>
    <string name="reminder_deleted">Напоминание убрано</string>
    <string name="reminder_updated">Напоминание изменено</string>

    <!-- ADD NOTE SCREEN -->
    <string name="add_note">Добавление заметки</string>
    <string name="note_text">Текст заметки:</string>
    <string name="note_name">Название заметки (необязательно):</string>
    <string name="note_icon">Иконка:</string>

    <!-- SHOPPING LISTS -->
    <string name="shopping_lists_templates">Шаблоны списков покупок</string>
    <string name="actual_shopping_lists">Текущие списки покупок</string>
    <string name="add_template">Добавление шаблона покупок</string>
    <string name="template_name">Название шаблона:</string>
    <string name="template_shopping_list">Список покупок:</string>

    <!-- SETTINGS -->
    <string name="task_status_colors">Цвета статусов задач:</string>
    <string name="day_margin">Считать, что день заканчивается:</string>
    <string name="day_margin_midnight">В полночь (00:00)</string>
    <string name="day_margin_custom">В другое время:</string>

    <!-- MISCELLANEOUS -->
    <string name="choose_month">Выберите месяц</string>
    <string name="note_dated_by">Заметка от</string>
    <string name="notification_title">EasyOrg - Напоминание</string>
    <string name="confirm_action">Подтвердите действие</string>
    <string name="set_default_colors_prompt">Вы действительно хотите установить цвета статусов задач по умолчанию?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="present">Есть</string>
    <string name="editing_template">Редактирование шаблона</string>
    <string name="no_templates">Нет шаблонов</string>
    <string name="no_active_shopping_lists">Нет активных списков покупок</string>
    <string name="edit_shopping_list">Редактирование списка покупок</string>
    <string name="no_notes">Нет заметок</string>
    <string name="choose_template">Выберите шаблон покупок</string>
    <string name="fill_with_template">Заполнить по шаблону</string>
    <string name="by_default">По умолчанию</string>

</resources>
