<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_end_date_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/change_end_date"
        android:textColor="#000000"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp">

        <RadioButton
            android:id="@+id/radioNoTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_end_date_perpetual"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radioCustomTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_end_date_concrete"
            android:textSize="16sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="300dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/buttonCancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="1px"
            android:layout_marginRight="1px"
            android:layout_weight="50"
            android:background="#d6d7d7"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/buttonOK"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="1px"
            android:layout_marginStart="1px"
            android:layout_weight="50"
            android:background="#d6d7d7"
            android:text="@string/ok" />
    </LinearLayout>
</LinearLayout>