<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@android:color/holo_blue_dark"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/buttonBack"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backIcon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginTop="1dp"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/arrow_back" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="5dp"
                android:paddingRight="20dp"
                android:text="@string/settings"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/task_status_colors"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_status_actual"
                        android:textColor="#555555"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="#888888"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <LinearLayout
                            android:id="@+id/rectInProcess"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTaskActual"
                            android:orientation="horizontal"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_status_done"
                        android:textColor="#555555"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="#888888"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <LinearLayout
                            android:id="@+id/rectDone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTaskDone"
                            android:orientation="horizontal"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_status_failed"
                        android:textColor="#555555"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="#888888"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <LinearLayout
                            android:id="@+id/rectNotDone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTaskFailed"
                            android:orientation="horizontal"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_status_partly_done"
                        android:textColor="#555555"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="#888888"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <LinearLayout
                            android:id="@+id/rectPartlyDone"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTaskInProcess"
                            android:orientation="horizontal"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:text="@string/task_status_postponed"
                        android:textColor="#555555"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="70dp"
                        android:layout_height="30dp"
                        android:background="#888888"
                        android:orientation="horizontal"
                        android:padding="2dp">

                        <LinearLayout
                            android:id="@+id/rectPostponed"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorTaskPostponed"
                            android:orientation="horizontal"></LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/byDefaultButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/byDefaultImage"
                        android:layout_width="130dp"
                        android:layout_height="29dp"
                        android:adjustViewBounds="true"
                        app:srcCompat="@drawable/by_default_button_medium" />

                    <TextView
                        android:layout_width="130dp"
                        android:layout_height="29dp"
                        android:gravity="center"
                        android:text="@string/by_default"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_margin"
                    android:textColor="#333333"
                    android:textSize="16sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/timeMidnight"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/timeMidnightRadio"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/radio_unchecked_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/day_margin_midnight"
                                android:textColor="#555555"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/timeCustom"
                            android:layout_width="wrap_content"
                            android:layout_height="28dp"
                            android:gravity="center_vertical"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/timeCustomRadio"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_weight="1"
                                android:adjustViewBounds="true"
                                app:srcCompat="@drawable/radio_unchecked_medium" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="8dp"
                                android:layout_marginStart="8dp"
                                android:text="@string/day_margin_custom"
                                android:textColor="#555555"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dip"
                        android:layout_marginRight="10dip"
                        android:gravity="bottom"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/customTime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:width="110dp"
                            android:background="@drawable/border_small"
                            android:gravity="bottom"
                            android:paddingBottom="5dp"
                            android:paddingEnd="5dp"
                            android:paddingLeft="8dp"
                            android:paddingRight="5dp"
                            android:paddingStart="8dp"
                            android:paddingTop="5dp"
                            android:text="@string/not_set_n"
                            android:textColor="#555555"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>